[package]
name = "cw-uniswap-v3"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Uniswap V3 math in Rust"
readme = "README.md"
homepage = "https://github.com/oraichain/cw-uniswap-v3.git"
repository = "https://github.com/oraichain/cw-uniswap-v3.git"
keywords = ["uniswapV3", "math"]
exclude = ["target/*", ".github/*", ".gitignore", "Uniswap/*"]

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999" }

cosmwasm-std = { version = "=1.2" }
cosmwasm-schema = { version = "=1.2" }
cosmwasm-storage = { version = "=1.2" }
thiserror = "1.0.61"
